--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>first-portfolio</title>
+    <title>Let's Donate</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
+    <h1>Let’s Help Those Who Are</h1>
+    <h1>More In Need</h1>
 
+    <p>They are suffering. They are helpless. They really need us.</p>
+    <p>Can't we help?</p>
 </body>
 
 </html>
