--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Let’s Help Those Who Are</h1>
         <h1>More In Need</h1>
 
-        <p>They are suffering. They are helpless. They really need us.</p>
+        <p>They are suffering. They are helpless! They really need us.</p>
         <p>Can't we help?</p>
 
         <a href="https://github.com/snigdharoy24/first-portfolio">Donate Now</a>
