--- a/index.html
+++ b/index.html
@@ -15,16 +15,24 @@
 </head>
 
 <body>
-    <Div class="top-image">
-        <h1>Let’s Help Those Who Are</h1>
-        <h1>More In Need</h1>
+    <section>
+        <Div class="top-image">
+            <h1>Let’s Help Those Who Are</h1>
+            <h1>More In Need</h1>
 
-        <p>They are suffering. They are helpless! They really need us.</p>
-        <p>Can't we help?</p>
+            <p>They are suffering. They are helpless! They really need us.</p>
+            <p>Can't we help?</p>
 
-        <a href="https://github.com/snigdharoy24/first-portfolio">Donate Now</a>
-    </Div>
+            <a class="donate-link" href="https://github.com/snigdharoy24/first-portfolio">Donate Now</a>
+        </Div>
+    </section>
 
+
+    <section>
+        <div>
+            <h1>Donate Today</h1>
+        </div>
+    </section>
 
 </body>
 
