--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="topper">
         <Div class="top-image">
             <h1>Let’s Help Those Who Are</h1>
             <h1>More In Need</h1>
@@ -28,11 +28,17 @@
     </section>
 
 
-    <section>
+    <section class="second-para">
         <div>
-            <h1>Donate Today</h1>
+            <h1>Let’s Help Those Who Are</h1>
+            <h1>More In Need</h1>
+
+            <p>They are suffering. They are helpless! They really need us.</p>
+            <p>Can't we help?</p>
         </div>
     </section>
+
+    <footer><span id="humble">Be Humble </span><br>I'm gonna do it!</footer>
 
 </body>
 
