--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section class="second-para">
         <div>
-            <h1>Let’s Help Those Who Are</h1>
+            <h1>Donate Now</h1>
             <h1>More In Need</h1>
 
             <p>They are suffering. They are helpless! They really need us.</p>
