--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Let’s Help Those Who Are</h1>
             <h1>More In Need</h1>
 
-            <p>They are suffering. They are helpless! They really need us.</p>
+            <p class="white-letter">They are suffering. They are helpless! They really need us.</p>
             <p>Can't we help?</p>
 
             <a class="donate-link" href="https://github.com/snigdharoy24/first-portfolio">Donate Now</a>
@@ -31,10 +31,14 @@
     <section class="second-para">
         <div>
             <h1>Donate Now</h1>
-            <h1>More In Need</h1>
 
-            <p>They are suffering. They are helpless! They really need us.</p>
-            <p>Can't we help?</p>
+            <p>If you thinking to donate, why not today?</p>
+
+            <button>2000k</button>
+            <BUtton>3000K</BUtton>
+            <button>5000k</button>
+
+            <input type="number">
         </div>
     </section>
 
