--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
 </head>
 
+
+
 <body>
     <section class="topper">
         <Div class="top-image">
-            <h1>Let’s Help Those Who Are</h1>
+            <h1>Let's Help Those Who Are</h1>
             <h1>More In Need</h1>
 
             <p class="white-letter">They are suffering. They are helpless! They really need us.</p>
@@ -26,6 +28,7 @@
             <a class="donate-link" href="https://github.com/snigdharoy24/first-portfolio">Donate Now</a>
         </Div>
     </section>
+
 
 
     <section class="second-para">
@@ -38,7 +41,32 @@
             <BUtton>3000K</BUtton>
             <button>5000k</button>
 
-            <input type="number">
+            <input type="number" id="amount" name="amount">
+        </div>
+    </section>
+
+
+
+    <section class="donate-plan">
+        <h1>Our Donate Plan</h1>
+        <p>what is your donate plan?</p>
+        <div class="flexible">
+            <div id="pink">
+
+                <h3>Food for a family</h3>
+                <p>You can donate for one or more whole family.</p>
+
+            </div>
+
+            <div id="red">
+                <h3>Shelter for a family</h3>
+                <p>More familys are homeless. Donate them shelter.</p>
+            </div>
+
+            <div id="yellow">
+                <h3>Education for a children</h3>
+                <p>Educate a child.</p>
+            </div>
         </div>
     </section>
 
