--- a/index.html
+++ b/index.html
@@ -70,6 +70,26 @@
         </div>
     </section>
 
+
+    <section class="reason">
+        <div class="third-part">
+            <h1>their lives depends on your donation</h1>
+            <p>their lives depends on your donation</p>
+        </div>
+        <div class="third-part"><img src="image/donation10.jpg" alt=""></div>
+    </section>
+
+
+    <section class="reason">
+
+        <div class="third-part"><img src="image/donation10.jpg" alt=""></div>
+
+        <div class="third-part">
+            <h1>their lives depends on your donation</h1>
+            <p>their lives depends on your donation</p>
+        </div>
+    </section>
+
     <footer><span id="humble">Be Humble </span><br>I'm gonna do it!</footer>
 
 </body>
